Button in article mode, fix borders safari, scroll shadow, custom scrollbars
* Added button to switch to live chat or ticket submission in article mode as per design
* Made all 1px borders caclulate from 1.1 to avoid subpixel issue in safari
* Added shadow at the bottom of article scroll container
* Made the scrollbars look way nicer in safai and chrome

--- a/src/styles/_vars.scss
+++ b/src/styles/_vars.scss
@@ -1,4 +1,13 @@
+/**
+ * 1. because safari 8 is dumb and rounds 1/12 to .083rem
+ *    which computes to 0.9999px & borders can't be sub pixel
+ *    we boost the calculation to do 1.1/12
+ */
+
 $font-size: 12;
+
+$thin-border-size: #{1.1/$font-size}rem; /* 1 */
+
 $zendesk-green: #78A300;
 
 // Button colors
