--- a/src/styles/components/UserContent.scss
+++ b/src/styles/components/UserContent.scss
@@ -4,7 +4,7 @@
   max-width: 100%;
   overflow: auto;
   word-break: break-word;
-  max-height: 400px;
+  max-height: 280px;
 
   ul {
     white-space: pre-wrap;
@@ -20,12 +20,40 @@
   }
 }
 
+.UserContent--scroll {
+  /*
+   * Creates the shadow effect at the bottom of the scrollable container
+   */
+  background:
+    /* Shadow covers */
+    linear-gradient(transparentize($base-color, 1), $base-color 70%) 0 100%,
+
+    /* Shadows */
+    radial-gradient(farthest-side at 50% 300%, transparentize($base-shadow, 0.8), transparentize($base-shadow, 1)) 0 100%;
+  background-repeat: no-repeat;
+  background-color: $base-color;
+  background-size: 100% #{40/$font-size}rem, 100% #{5/$font-size}rem;
+  background-attachment: local, scroll;
+
+  /*
+   * Customise scrollbar for safari/chrome
+   */
+  &::-webkit-scrollbar {
+    box-shadow: none;
+    width: #{3/$font-size}rem;
+  }
+  &::-webkit-scrollbar-thumb {
+    background: $base-border-color;
+    border-radius: #{3/$font-size}rem;
+  }
+}
+
 .UserContent-viewArticleLink {
   &:before {
     content: '';
     display: block;
     width: #{20/$font-size}rem;
-    border-top: #{1/$font-size}rem solid $base-border-color;
+    border-top: $thin-border-size solid $base-border-color;
     margin-top: #{16/$font-size}rem;
     padding-bottom: #{19/$font-size}rem;
   }
